# photon

./: .travis.yml  ChangeLog.md  LICENSE  README.md  package.yaml  photon.cabal  stack.yaml
app/: Main.hs
src/: APIAuth.hs  CommandParsing.hs  Lib.hs  Photon.hs  TimeUtils.hs
src/AuthenticationStrategies/: APIAuth.hs  JWTAuth.hs
test/: APIAuthSpec.hs  CommandParsingSpec.hs  PhotonSpec.hs  TimeUtilsSpec.hs
test/AuthenticationStrategies/: APIAuthSpec.hs  JWTAuthSpec.hs
test/keys/: certificate.pem  private.pem  public.pem
