name:                photon
version:             0.1.7
-- synopsis:
-- description:
homepage:            https://github.com/mattmoore/photon#readme
license:             BSD3
license-file:        LICENSE
author:              Matt Moore
maintainer:          mattmoore@carbonhelix.com
copyright:           2017 Matt Moore
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Photon
                     , APIAuth
                     , CommandParsing
                     , TimeUtils
  build-depends:       base >= 4.7 && < 5
                     , split
                     , MissingH
                     , http-conduit
                     , http-types
                     , bytestring
                     , utf8-string
                     , case-insensitive
                     , SHA
                     , pureMD5
                     , base64-bytestring
                     , time
                     , text
                     , containers
                     , aeson
                     , aeson-pretty
  default-language:    Haskell2010
  other-modules:       Paths_photon

executable photon-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , photon
                     , MissingH
  default-language:    Haskell2010

test-suite photon-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , photon
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mattmoore/photon
