name:                photon
version:             0.1.11
-- synopsis:
-- description:
homepage:            https://github.com/mattmoore/photon#readme
license:             BSD3
license-file:        LICENSE
author:              Matt Moore
maintainer:          mattmoore@carbonhelix.com
copyright:           2017 Matt Moore
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Photon
                     , AuthenticationStrategies.APIAuth
                     , AuthenticationStrategies.JWTAuth
                     , CommandParsing
                     , TimeUtils
  build-depends:       base >= 4.7 && < 5
                     , http-conduit
                     , http-types
                     , bytestring
                     , utf8-string
                     , case-insensitive
                     , SHA
                     , pureMD5
                     , base64-bytestring
                     , time
                     , text
                     , aeson
                     , aeson-pretty
                     , x509
                     , x509-store
                     , cryptonite
                     , jose-jwt
  default-language:    Haskell2010
  other-modules:       Paths_photon

executable photon-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , photon
  default-language:    Haskell2010

test-suite photon-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , photon
                     , bytestring
                     , http-types
                     , hspec
                     , hspec-discover
                     , time
                     , SHA
                     , x509
                     , x509-store
                     , cryptonite
                     , jose-jwt
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  other-modules:       AuthenticationStrategies.APIAuthSpec
                     , AuthenticationStrategies.JWTAuthSpec
                     , TimeUtilsSpec
                     , CommandParsingSpec
                     , PhotonSpec

source-repository head
  type:     git
  location: https://github.com/mattmoore/photon
